--- a/frontend/myCrossing/src/app/perfil/tareas/tareas.component.html
+++ b/frontend/myCrossing/src/app/perfil/tareas/tareas.component.html
@@ -23,7 +23,7 @@
   </ng-container>
 
   <!-- Boton modo edicion -->
-  <button id="editar" (click)="activaEdicion()">{{modoEdicion}}</button>
+  <button class="editar editar-azul" #botonEdit (click)="activaEdicion()"></button>
 
 </div>
 
