feat: Navbar & Footer done
-Ya funciona el nombre de usuario

--- a/frontend/myCrossing/src/app/navbar/navbar.component.css
+++ b/frontend/myCrossing/src/app/navbar/navbar.component.css
@@ -72,6 +72,7 @@ img {
   position: absolute;
   top: 4vw;
   overflow: hidden;
+  background-color: rgb(247, 243, 232);
 }
 
 .dropdown-menu > button {
