--- a/frontend/myCrossing/src/styles.css
+++ b/frontend/myCrossing/src/styles.css
@@ -73,3 +73,9 @@ body{
 .footer-wrap{
   position: relative;
 }
+
+.flex-column-centered{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
