--- a/frontend/myCrossing/src/app/navbar/navbar.component.html
+++ b/frontend/myCrossing/src/app/navbar/navbar.component.html
@@ -15,7 +15,7 @@
         <span style="font-size: 1.3vw;"><b>{{this.verification.nombre | capitalize}}</b></span>
         <img src="../../assets/images/logo.png" (click)="toggleMenu()" style="margin-left: 5%"/>
         <div class="dropdown-menu" [hidden]="!menu" >
-          <button class="button-menu" routerLink="/perfil" routerLinkActive="activo" (click)="menu = false">Perfil temp</button>
+          <button class="button-menu" routerLink="/perfil" routerLinkActive="activo" (click)="menu = false">Perfil</button>
           <button class="button-menu" (click)="logOut()">Cierra sesión</button>
         </div>
       </div>
